--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
-  scroll-behavior: smooth;
+  scroll-behavior: auto;
 }
 section {
   padding: 100px;
@@ -33,7 +33,7 @@ header.sticky .logo {
 header .logo {
   color: #fff;
   font-size: 24px;
-  text-transform: uppercase;
+  text-transform:uppercase;
   text-decoration: none;
   font-weight: 700;  
 }
